# ukuiad

./: .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .gitlab-ci.yml  .prettierrc  .pylintrc  LICENSE.md  Makefile  README.md  nuxt.config.ts  package.json  pyproject.toml  setup.cfg  tsconfig.json
client/: app.vue
client/assets/: iconsets.ts  vuetify.settings.scss
client/assets/scss/: main.scss
client/assets/scss/abstracts/: _functions.scss  _mixins.scss  _variables.scss
client/assets/scss/base/: _base.scss  _fonts.scss  _index.scss
client/assets/scss/components/: _app-example.scss  _index.scss
client/assets/scss/layout/: _index.scss
client/assets/scss/themes/: _index.scss
client/assets/scss/vendors/: _index.scss
client/components/: AppExample.vue
client/layouts/: default.vue
client/middleware/: auth.ts  not-auth.ts
client/pages/: index.vue
client/plugins/: api.ts  persistedstate.ts  piniaRouter.ts  vuetify.ts
client/types/: index.d.ts  nuxt.d.ts  pinia.d.ts
config/: Dockerfile.backend  Dockerfile.frontend  robots.txt
config/docker/: docker-compose.yml  nginx.conf
private/: .gitignore
private/static/css/: admin.css
private/static/css/plugins/: materialdesignicons.min.css
public/: .gitignore  robots.txt
server/apps/: __init__.py
server/apps/api/auth/: __init__.py  admin.py  apps.py  models.py  permissions.py
server/apps/api/auth/migrations/: 0001_initial.py
server/apps/api/auth/v1/: routers.py
server/apps/api/auth/v1/serializers/: token.py  user.py
server/apps/core/: __init__.py
server/apps/core/api/: apps.py  pagination.py  permissions.py  urls.py  views.py
server/apps/core/api/v1/: urls.py
server/apps/core/main/: __init__.py  apps.py  urls.py  views.py
server/apps/core/utils/: __init__.py  admin.py  apps.py  fields.py  serializers.py  views.py
server/apps/core/utils/services/: __init__.py  get_target_user.py
server/config/: asgi.py  urls.py  wsgi.py
server/config/settings/: __init__.py
server/config/settings/base/: __init__.py  apps.py  environment.py  middlewares.py
server/config/settings/components/: __init__.py  auth.py  ckeditor.py  email.py  internationalization.py  logging.py  paths.py  rest_framework.py  sentry.py  static.py
server/config/settings/environments/: __init__.py  common.py  development.py  production.py
server/templates/: 400.html  403.html  403_csrf.html  404.html  500.html  base.html
server/templates/admin/: base_site.html
(+6 files in other folders)
